--- a/index.html
+++ b/index.html
@@ -3,24 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website</title>
+    <title>Profile Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Simple Website</h1>
-    </header>
-
-    <main>
-        <p>This is a simple static website hosted locally or on serverless platforms.</p>
-        <button onclick="showMessage()">Click Me!</button>
-        <p id="message"></p>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 My Website</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <div class="profile-card">
+        <img src="avatar.png" alt="Profile Image" class="profile-img">
+        <h1>SURAJ KAMBLE</h1>
+        <h3>Web Developer</h3>
+        <p>Hello Friends🌎 This is my first free website hosted on <a href="https://vitthaldesai7796-blip.github.io/myweb/" target="_blank">GitHub Pages</a>.</p>
+    </div>
 </body>
 </html>
