--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <img src="avatar.png" alt="Profile Image" class="profile-img">
         <h1>SURAJ KAMBLE</h1>
         <h3>Web Developer</h3>
-        <p>Hello Friends🌎 This is my first free website hosted on <a href="https://vitthaldesai7796-blip.github.io/myweb/" target="_blank">GitHub Pages</a>.</p>
+        <p>Hello Friends🌎 This is my first free website hosted on <a href="https://vitthaldesai7796-blip.github.io/myweb/" target="_blank"> My GitHub Pages</a>.</p>
     </div>
 </body>
 </html>
+
