--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="card">
-<img src="image.png" alt="Profile    Photo" class="profile-img">
-        <div class="circle"></div>
+        <div class="circle"><img src="image.png" alt="Profile    Photo" class="profile-img"></div>
         <div class="name">Suraj</div>
         <div class="title">Web Developer</div>
         <div class="description">
